rgw: Report empty endpoints as error instead of crashing

Fixes: https://tracker.ceph.com/issues/53941
Signed-off-by: Adam C. Emerson <aemerson@redhat.com>
(cherry picked from commit 79d1e3a3d24cd14fdd17d270f5f082fff1c03c29)

Conflicts:
	src/rgw/rgw_admin.cc
	src/rgw/rgw_rados.cc
	src/rgw/rgw_trim_mdlog.cc
 - SAL changes upstream

Resolves: rhbz#2042692
Signed-off-by: Adam C. Emerson <aemerson@redhat.com>
(cherry picked from commit 42c7e894389bbd90520483c5d9d6f9016ae0ed3c)
Signed-off-by: Adam C. Emerson <aemerson@redhat.com>