src/rgw/rgw_admin.cc
@@ -7298,6 +7298,11 @@ next:
     }
 
     auto num_shards = g_conf()->rgw_md_log_max_shards;
+    auto mltcr = create_admin_meta_log_trim_cr(dpp(), store, &http, num_shards);
+    if (!mltcr) {
+      cerr << "Cluster misconfigured! Unable to trim." << std::endl;
+      return -EIO;
+    }
     ret = crs.run(create_admin_meta_log_trim_cr(dpp(), store, &http, num_shards));
     if (ret < 0) {
       cerr << "automated mdlog trim failed with " << cpp_strerror(ret) << std::endl;
